--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
           property: position; 
           from: 4.94 0 4.94;
           to: 2.3 0 1.5; 
+          from: 2.3 0 1.5;
+          to:
           dur: 10000; 
           loop: true; 
           "  ></a-entity>
