--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
           loop: true; 
           "  ></a-entity>
       
+          <a-entity 
+          ply-model="src:tree1.ply"
+          position="0 0 0"
+          rotation="-90 90 0"
+          image = "src:1200px-Densely_forested_mountains_of_Jigme_Dorji_NP_AJTJ_IMG_1394.jpg"
+          ></a-entity>
 
       
 
