--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
           image = "src:1200px-Densely_forested_mountains_of_Jigme_Dorji_NP_AJTJ_IMG_1394.jpg"
           ></a-entity>
 
+          <a-entity 
+          ply-model="src:garage.ply"
+          position="0 0 0"
+          rotation="-90 90 0"
+          image = "src:1200px-Densely_forested_mountains_of_Jigme_Dorji_NP_AJTJ_IMG_1394.jpg"
+          ></a-entity>
+
       
 
      
