--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           ></a-entity>
 
           <a-entity 
-          ply-model="src:garage.ply"
-          position="0 0 0"
-          rotation="-90 90 0"
-          image = "src:1200px-Densely_forested_mountains_of_Jigme_Dorji_NP_AJTJ_IMG_1394.jpg"
-          ></a-entity>
+          ply-model="src: garage.ply" 
+          position="1.00507 0 -3.14748" r
+          otation="-90 0 0" 
+          scale="0.5 0.5 0.5">
+         </a-entity>
 
       
 
