--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
           image = "src:1200px-Densely_forested_mountains_of_Jigme_Dorji_NP_AJTJ_IMG_1394.jpg"
           ></a-entity>
 
-          <a-entity ply-model="src: garage.ply" 
+          <a-entity 
+          ply-model="src: garage.ply" 
           position="1.00507 0 -3.14748" 
           rotation="-90 0 0" 
-         scale="0.5 0.5 0.5">
+          scale="0.5 0.5 0.5">
         </a-entity>
 
       
