--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
           scale="0.5 0.5 0.5">
         </a-entity>
 
-        <a-entity camera="" position="7.24139 1.6 2.09302" wasd-controls="" rotation="-10.427831871380986 86.40203550572822 0" look-controls="" aframe-injected="" data-aframe-inspector-original-camera=""></a-entity>
+        <a-entity
+        camera="" 
+        position="7.24139 1.6 2.09302" 
+        wasd-controls="" rotation="-10.427831871380986 -90 0" 
+        look-controls="" aframe-injected="" d
+        ata-aframe-inspector-original-camera="">
+      </a-entity>
 
       
 
