--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <a-entity
         camera="" 
         position="7.24139 1.6 3.1" 
-        wasd-controls="" rotation="-10.427831871380986 70 0" 
+        wasd-controls="" rotation="1 66 0" 
         look-controls="" aframe-injected="" d
         ata-aframe-inspector-original-camera="">
       </a-entity>
